--- a/style.css
+++ b/style.css
@@ -18,6 +18,10 @@ h3{
     color: #ffffff;
 }
 
+#johns{
+    cursor: pointer;
+}
+
 h1{
     margin-top: 50px;
     font-family: 'Prata', sans-serif;
@@ -60,6 +64,7 @@ nav ul{
     font-family: 'Inter', sans-serif;
     font-size: 1em;
     color: #adadad;
+    cursor: pointer;
 }
 
 button{
@@ -70,6 +75,7 @@ button{
     color: #0a0a0b;
     background: #fbe850;
     font-weight: 200;
+    cursor:pointer
 }
 
 button:hover{
@@ -99,6 +105,7 @@ li:hover{
 .logo-list ul li{
     margin: 0px;
     padding: 0px;
+    cursor: pointer;
 }
 
 .sites{
@@ -158,6 +165,7 @@ li:hover{
 .footer ul img{
     margin: 0;
     padding: 0;
+    cursor: pointer;
 
 }
 
